2005-08-20  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/syscall.h: Simplify the configuration
	by removing the adaptive VSYSCALL support: this made little sense,
	since RT users will/must know which capabilities their respective
	targets have. Replace all the hairy VSYSCALL-related switches by a
	single SEP-related one: i.e., either one activates SEP and has
	NPTL, or disables them. No middle choice anymore.

	* skins/posix/syscall.c: Set __pthread_setschedparam as
	conforming.

	* fusion: Following Jan's proposal, export module symbols to a
	central repository, and get rid of the former ugly hack
	circumventing the Kbuild warnings in the same move.

2005-08-19  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Make all *bind() calls conforming, so that
	we do not attempt to switch the caller to primary mode if it
	happens to be a unshadowed thread, but we do so otherwise.

	* skins/posix/syscall.c (__pthread_setschedparam): Automatically
	shadow the calling thread when applicable.

	* testsuite/latency/latency.c (main): Fix overflow for periods > 2
	ms (period_ns).

	* arch/ia64/hal/ia64.c, arch/ppc64/hal/ppc64.c
	(do_exception_event): Fix propagation code.

2005-08-18  Fillod Stephane <stephane.fillod@thomson.net>
	
	* nucleus/heap.c, nucleus/pipe.c: Use C99 initializers.

	* skins/compat/shm.c: Add shared memory support.

	* skins/compat/fifo.c: Pass read/write flag to fifo handlers.

2005-08-17  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_harden): Wait in TASK_INTERRUPTIBLE
	state instead of TASK_UNINTERRUPTIBLE, so that we don't mess with
	the runqueue's counter of uninterruptible tasks.
	(do_sigwake_event): Fix debug break state detection for
	LinuxThreads setups.

2005-08-17  Dmitry Adamushko  <dmitry.adamushko@datacon.at>
	
	* nucleus/pipe.c: Various cleanups.

2005-08-16  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c: Rework and simplify timer locking code.
