@@ -776,6 +776,8 @@ install-data-local: .rtai_config
 	$(LN_S) @abs_top_builddir@ $(DESTDIR)$(prefix)/build
 	rm -f $(DESTDIR)$(prefix)/source
 	$(LN_S) @abs_srcdir@ $(DESTDIR)$(prefix)/source
+	rm -f $(DESTDIR)$(prefix)/symbols
+	$(LN_S) build/symbols $(DESTDIR)$(prefix)/symbols
 
 install-exec-local: devices
 
