@@ -274,7 +274,6 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 modext = @RTAI_MODULE_EXT@
 abs_srcdir = @abs_srcdir@
 libhal_SRC = x86.c usercopy.c $(am__append_1)
@@ -461,8 +460,6 @@ all-local: rtai_hal$(modext)
 install-exec-local: rtai_hal$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_hal.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_hal$(modext)
