@@ -1,5 +1,4 @@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 
 modext = @RTAI_MODULE_EXT@
 
@@ -47,8 +46,6 @@ distclean-local:
 install-exec-local: rtai_nucleus$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_nucleus.mod $(symboldir)
 
 uninstall-local: 
 	$(RM) $(moduledir)/rtai_nucleus$(modext)
