@@ -313,7 +313,6 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 modext = @RTAI_MODULE_EXT@
 libmodule_SRC = heap.c intr.c module.c pod.c synch.c thread.c timer.c \
 	$(am__append_1) $(am__append_2) $(am__append_3)
@@ -736,8 +735,6 @@ distclean-local:
 install-exec-local: rtai_nucleus$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_nucleus.mod $(symboldir)
 
 uninstall-local: 
 	$(RM) $(moduledir)/rtai_nucleus$(modext)
