@@ -306,7 +306,6 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 modext = @RTAI_MODULE_EXT@
 libmodule_SRC = intr.c module.c task.c timer.c $(am__append_1) \
 	$(am__append_3) $(am__append_5) $(am__append_7)
@@ -659,12 +658,9 @@ all-local: rtai_compat$(modext)
 install-exec-local: rtai_compat$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_compat.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_compat$(modext)
-	$(RM) $(symboldir)/rtai_compat.mod
 
 .PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
