@@ -1,5 +1,4 @@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 includedir = $(prefix)/include/posix
 
 modext = @RTAI_MODULE_EXT@
@@ -68,8 +67,6 @@ endif
 install-exec-local: rtai_posix$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_posix.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_posix$(modext)
