@@ -298,7 +298,6 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 modext = @RTAI_MODULE_EXT@
 libmodule_SRC = sched.c thread_attr.c thread.c mutex_attr.c mutex.c \
 	cond_attr.c cond.c sem.c cancel.c once.c signal.c tsd.c \
@@ -651,8 +650,6 @@ all-local: rtai_posix$(modext)
 install-exec-local: rtai_posix$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_posix.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_posix$(modext)
