@@ -1,5 +1,4 @@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 includedir = $(prefix)/include/psos+
 
 modext = @RTAI_MODULE_EXT@
@@ -52,12 +51,9 @@ endif
 install-exec-local: rtai_psos$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_psos.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_psos$(modext)
-	$(RM) $(symboldir)/rtai_psos.mod
 
 if CONFIG_RTAI_OPT_UVM
 
