@@ -312,7 +312,6 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 modext = @RTAI_MODULE_EXT@
 libmodule_SRC = \
 	flag.c \
@@ -738,12 +737,9 @@ all-local: rtai_uitron$(modext)
 install-exec-local: rtai_uitron$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_uitron.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_uitron$(modext)
-	$(RM) $(symboldir)/rtai_uitron.mod
 
 .PHONY: FORCE
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
