@@ -1,5 +1,4 @@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 includedir = $(prefix)/include/vrtx
 
 modext = @RTAI_MODULE_EXT@
@@ -53,12 +52,9 @@ endif
 install-exec-local: rtai_vrtx$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_vrtx.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_vrtx$(modext)
-	$(RM) $(symboldir)/rtai_vrtx.mod
 
 if CONFIG_RTAI_OPT_UVM
 
