@@ -317,7 +317,6 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 moduledir = $(DESTDIR)@RTAI_MODULE_DIR@
-symboldir = $(DESTDIR)@RTAI_SYMBOL_DIR@
 modext = @RTAI_MODULE_EXT@
 libmodule_SRC = \
 	event.c \
@@ -831,12 +830,9 @@ all-local: rtai_vrtx$(modext)
 install-exec-local: rtai_vrtx$(modext)
 	$(mkinstalldirs) $(moduledir)
 	$(INSTALL_DATA) $< $(moduledir)
-	$(mkinstalldirs) $(symboldir)
-	$(INSTALL_DATA) $(top_builddir)/symbols/rtai_vrtx.mod $(symboldir)
 
 uninstall-local:
 	$(RM) $(moduledir)/rtai_vrtx$(modext)
-	$(RM) $(symboldir)/rtai_vrtx.mod
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
